# klogmaster

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  server.hpp
viewer/: index.js  package.json
viewer/public/: style.css
